<resources>
    <string name="login_create_account">Créer un compte</string>
    <string name="login_login">Connexion</string>
    <string name="login_email">Email</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_first_name">Prénom</string>
    <string name="login_last_name">Nom</string>
    <string name="login_preferred_currency">Devise préférée</string>
    <string name="login_already_have_account">Déjà un compte ? Se connecter</string>
    <string name="login_create_account_prompt">Créer un compte</string>
</resources>
